Fix layout on safari

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 
 body {
     display: grid;
-    min-width: 100%;
+    flex: 0 0 100%;
     margin: 0;
 }
 
